sorted/tests/19-pattern-signed-int-literal.stderr
error: -170141183460469231731687303715884105728 should sort before 0
 --> tests/19-pattern-signed-int-literal.rs:9:9
  |
9 |         -170141183460469231731687303715884105728 => {
  |         ^
